--- a/核心技术文档/部署指南.md
+++ b/核心技术文档/部署指南.md
@@ -70,37 +70,497 @@ cd DreamAIChat_APP
 
 ### 3.3 配置 API 地址
 
-1. **打开网络配置**
+#### 3.3.1 什么是 API 地址？
+
+API 地址（也叫 Base URL）是你的后端服务器地址。当应用需要获取数据或发送数据时，会向这个地址发送 HTTP 请求。
+
+**简单理解**：
+- 就像你家的地址一样，API 地址告诉应用"去哪里找数据"
+- 例如：`https://api.example.com/` 就是服务器的地址
+- 具体的接口（如登录、发送消息）会在这个地址后面添加路径
+
+#### 3.3.2 配置步骤（详细版）
+
+**步骤 1：找到配置文件**
+
+1. 在 Android Studio 左侧的 `Project` 面板中，找到以下路径：
    ```
-   app/src/main/java/com/example/dreamaichat_app/data/remote/RetrofitClient.java
+   app → src → main → java → com → example → dreamaichat_app → data → remote → RetrofitClient.java
+   ```
+2. 双击打开 `RetrofitClient.java` 文件
+
+**步骤 2：修改 BASE_URL**
+
+在文件中找到这一行（大约在第 30 行左右）：
+```java
+private static final String BASE_URL = "https://api.example.com/";
+```
+
+将 `https://api.example.com/` 替换为你的实际 API 地址。
+
+**重要提示**：
+- ✅ 地址必须以 `http://` 或 `https://` 开头
+- ✅ 地址末尾必须有斜杠 `/`
+- ✅ 不要包含具体的接口路径（如 `/auth/login`），只写基础地址
+- ❌ 错误示例：`api.example.com`（缺少协议）
+- ❌ 错误示例：`https://api.example.com`（缺少末尾斜杠）
+- ✅ 正确示例：`https://api.example.com/`
+
+#### 3.3.3 不同场景的配置方法
+
+**场景 1：使用本地开发服务器**
+
+如果你在本地运行后端服务器（如使用 Spring Boot、Node.js 等）：
+
+```java
+// 如果使用 Android 模拟器，使用 10.0.2.2 代替 localhost
+private static final String BASE_URL = "http://10.0.2.2:8080/";
+
+// 如果使用真机调试，使用电脑的 IP 地址（在 cmd 中输入 ipconfig 查看）
+private static final String BASE_URL = "http://192.168.1.100:8080/";
+```
+
+**如何查看电脑 IP 地址**：
+- Windows：打开命令提示符（cmd），输入 `ipconfig`，找到 "IPv4 地址"
+- Mac/Linux：打开终端，输入 `ifconfig`，找到 "inet" 地址
+
+**场景 2：使用测试服务器**
+
+如果你有测试环境的服务器地址：
+
+```java
+private static final String BASE_URL = "https://test-api.yourcompany.com/";
+```
+
+**场景 3：使用生产服务器**
+
+正式发布时使用：
+
+```java
+private static final String BASE_URL = "https://api.yourcompany.com/";
+```
+
+**场景 4：暂时没有后端服务器（开发测试）**
+
+如果你还没有后端服务器，可以：
+
+1. **使用模拟数据**（推荐用于 UI 开发）
+   - 暂时不修改 BASE_URL
+   - 在 `LoginUseCase` 和 `SendMessageUseCase` 中返回模拟数据
+   - 这样可以先完成界面开发
+
+2. **使用公共测试 API**
+   - 可以使用一些免费的测试 API 服务
+   - 例如：`https://jsonplaceholder.typicode.com/`（仅用于测试，不是真实功能）
+
+#### 3.3.4 配置示例
+
+**完整配置示例**：
+
+```java
+public class RetrofitClient {
+    // 开发环境 - 本地服务器
+    private static final String BASE_URL = "http://10.0.2.2:8080/";
+    
+    // 或者测试环境
+    // private static final String BASE_URL = "https://test-api.example.com/";
+    
+    // 或者生产环境
+    // private static final String BASE_URL = "https://api.example.com/";
+    
+    // ... 其他代码
+}
+```
+
+#### 3.3.5 如何验证配置是否正确？
+
+**方法 1：查看日志**
+
+1. 运行应用
+2. 打开 Android Studio 底部的 `Logcat` 面板
+3. 过滤标签：输入 `OkHttp` 或 `Retrofit`
+4. 如果看到类似以下的日志，说明配置成功：
+   ```
+   D/OkHttp: --> POST https://api.example.com/auth/login
+   D/OkHttp: Content-Type: application/json
    ```
 
-2. **修改 BASE_URL**
-   ```java
-   private static final String BASE_URL = "https://your-api-server.com/";
-   ```
+**方法 2：测试登录功能**
 
-3. **配置认证 Token（如需要）**
-   - 在 `SendMessageUseCase` 中配置实际的认证 Token
-   - 或实现 Token 管理机制
+1. 在应用中输入账号密码，点击登录
+2. 查看 Logcat：
+   - 如果看到网络请求日志，说明配置正确
+   - 如果看到连接错误（如 "Failed to connect"），检查：
+     - API 地址是否正确
+     - 服务器是否运行
+     - 网络是否连接
+
+#### 3.3.6 常见问题解决
+
+**问题 1：连接失败（Connection refused）**
+
+**原因**：
+- API 地址错误
+- 服务器未运行
+- 防火墙阻止连接
+
+**解决方法**：
+1. 检查 API 地址是否正确（包括协议、端口号）
+2. 确认后端服务器正在运行
+3. 检查网络连接
+
+**问题 2：404 Not Found**
+
+**原因**：
+- API 路径错误
+- 服务器上没有对应的接口
+
+**解决方法**：
+1. 检查 `ApiService.java` 中的接口路径是否正确
+2. 与后端开发人员确认接口路径
+
+**问题 3：SSL 证书错误（仅 HTTPS）**
+
+**原因**：
+- 使用了自签名证书
+- 证书过期
+
+**解决方法**（仅开发环境）：
+- 暂时使用 HTTP 协议（不推荐生产环境）
+- 或配置信任所有证书（仅用于开发测试）
+
+#### 3.3.7 配置认证 Token（可选）
+
+如果你的 API 需要认证 Token，需要在登录成功后保存 Token，然后在后续请求中使用。
+
+**当前实现**：
+- Token 在 `SendMessageUseCase` 中使用
+- 登录成功后，Token 应该保存在 `SharedPreferences` 或数据库中
+- 后续请求会自动带上 Token
+
+**如何配置**（如果 Token 管理还未实现）：
+1. 暂时可以在 `SendMessageUseCase` 中硬编码测试 Token
+2. 后续会实现完整的 Token 管理机制
+
+#### 3.3.8 下一步
+
+配置完 API 地址后：
+1. ✅ 保存文件（Ctrl+S 或 Cmd+S）
+2. ✅ 同步项目（点击 Android Studio 顶部的 "Sync Now"）
+3. ✅ 运行应用测试网络连接
+4. ✅ 查看 Logcat 确认请求是否发送成功
 
 ### 3.4 配置数据库
 
-项目使用 Room 数据库，首次运行会自动创建数据库。如需修改数据库配置：
+#### 3.4.1 什么是 Room 数据库？
 
-1. **打开数据库配置**
-   ```
-   app/src/main/java/com/example/dreamaichat_app/data/database/AppDatabase.java
+**简单理解**：
+- Room 是 Android 官方提供的数据库框架，基于 SQLite
+- 就像 Excel 表格一样，用来存储应用的数据（用户信息、聊天记录等）
+- 数据会保存在手机本地，即使关闭应用也不会丢失
+
+**数据库结构**：
+- **users 表**：存储用户信息（账号、密码、用户名等）
+- **conversations 表**：存储会话信息（对话标题、使用的模型等）
+- **messages 表**：存储消息内容（用户消息、AI回复等）
+
+**数据关系**：
+```
+用户 (users)
+  └── 会话 (conversations) - 一个用户可以有多个会话
+        └── 消息 (messages) - 一个会话可以有多条消息
+```
+
+#### 3.4.2 数据库文件位置
+
+**数据库文件位置**：
+- 应用首次运行后，数据库文件会自动创建
+- 位置：`/data/data/com.example.dreamaichat_app/databases/dreamai_chat.db`
+- 这是应用私有目录，其他应用无法访问
+
+**如何查看数据库文件**（开发调试）：
+1. 使用 Android Studio 的 Device File Explorer
+   - 点击 `View` → `Tool Windows` → `Device File Explorer`
+   - 导航到 `/data/data/com.example.dreamaichat_app/databases/`
+   - 可以看到 `dreamai_chat.db` 文件
+
+2. 使用 ADB 命令（需要 root 权限）
+   ```bash
+   adb shell
+   run-as com.example.dreamaichat_app
+   cd databases
+   ls
    ```
 
-2. **修改数据库名称（如需要）**
+#### 3.4.3 数据库配置说明
+
+**步骤 1：检查数据库文件是否已创建**
+
+数据库文件在以下位置：
+```
+app/src/main/java/com/example/dreamaichat_app/data/database/AppDatabase.java
+```
+
+**步骤 2：了解数据库配置**
+
+打开 `AppDatabase.java`，你会看到以下配置：
+
+```java
+@Database(
+    entities = {
+        UserEntity.class,        // 用户表
+        ConversationEntity.class, // 会话表
+        MessageEntity.class      // 消息表
+    },
+    version = 1,  // 数据库版本号
+    exportSchema = false
+)
+```
+
+**重要配置说明**：
+
+1. **数据库名称**：
+   
    ```java
-   private static final String DATABASE_NAME = "your_database_name";
+   private static final String DATABASE_NAME = "dreamai_chat.db";
+   ```
+   - 这是数据库文件名
+   - 可以修改为你想要的名称（如 `my_chat.db`）
+   - 修改后，旧数据库会被删除（开发环境）
+   
+2. **数据库版本**：
+   ```java
+   version = 1
+   ```
+   - 每次修改表结构（添加字段、删除表等）时，需要递增版本号
+   - 例如：第一次修改后改为 `version = 2`
+   - 生产环境需要实现 `Migration` 类来迁移数据
+
+3. **开发环境配置**：
+   ```java
+   .fallbackToDestructiveMigration()  // 版本升级时删除旧数据
+   .allowMainThreadQueries()          // 允许在主线程查询
+   ```
+   - **注意**：这些配置仅用于开发环境
+   - 生产环境需要移除 `allowMainThreadQueries()`，并使用后台线程
+
+#### 3.4.4 数据库初始化流程
+
+**首次运行应用时**：
+
+1. **应用启动** → 调用 `AppDatabase.getInstance(context)`
+2. **Room 框架检查** → 数据库文件是否存在？
+   - 如果不存在 → 创建数据库文件
+   - 如果存在 → 检查版本号是否匹配
+3. **创建表结构** → 根据 `@Entity` 注解自动创建表
+4. **数据库就绪** → 可以开始使用
+
+**数据库表结构**：
+
+**users 表**：
+| 字段名 | 类型 | 说明 |
+|--------|------|------|
+| id | Long | 用户ID（主键，自动生成）|
+| account | String | 用户账号（手机号或邮箱）|
+| password | String | 密码（加密后）|
+| username | String | 用户名 |
+| avatarUrl | String | 头像URL |
+| memberType | String | 会员类型（free/premium）|
+| token | String | 登录Token |
+| tokenExpireTime | Long | Token过期时间 |
+| createdAt | Long | 创建时间 |
+| updatedAt | Long | 更新时间 |
+
+**conversations 表**：
+| 字段名 | 类型 | 说明 |
+|--------|------|------|
+| id | Long | 会话ID（主键，自动生成）|
+| userId | Long | 用户ID（外键）|
+| title | String | 会话标题 |
+| model | String | 使用的AI模型 |
+| messageCount | Integer | 消息总数 |
+| isFavorite | Boolean | 是否收藏 |
+| lastMessagePreview | String | 最后消息预览 |
+| lastMessageTime | Long | 最后消息时间 |
+| createdAt | Long | 创建时间 |
+| updatedAt | Long | 更新时间 |
+
+**messages 表**：
+| 字段名 | 类型 | 说明 |
+|--------|------|------|
+| id | Long | 消息ID（主键，自动生成）|
+| conversationId | Long | 会话ID（外键）|
+| role | String | 消息类型（user/assistant/system）|
+| content | String | 消息内容 |
+| status | String | 消息状态（sending/success/failed）|
+| errorMessage | String | 错误信息 |
+| createdAt | Long | 创建时间 |
+| updatedAt | Long | 更新时间 |
+
+#### 3.4.5 如何使用数据库
+
+**在代码中使用数据库**：
+
+1. **获取 Repository 实例**：
+   ```java
+   UserRepository userRepository = new UserRepository(context);
    ```
 
-3. **配置数据库迁移（生产环境）**
-   - 当前使用 `fallbackToDestructiveMigration()`（开发环境）
-   - 生产环境需要实现 `Migration` 类
+2. **插入数据**：
+   ```java
+   UserEntity user = new UserEntity("user@example.com", "password", "用户名");
+   userRepository.insertOrUpdateUser(user)
+       .subscribe(
+           () -> Log.d("Database", "用户保存成功"),
+           error -> Log.e("Database", "保存失败", error)
+       );
+   ```
+
+3. **查询数据**：
+   ```java
+   userRepository.getUserByAccount("user@example.com")
+       .subscribe(
+           user -> Log.d("Database", "找到用户: " + user.username),
+           error -> Log.e("Database", "查询失败", error)
+       );
+   ```
+
+#### 3.4.6 数据库迁移（生产环境）
+
+**什么时候需要迁移**：
+- 修改了表结构（添加字段、删除字段、修改字段类型）
+- 需要保留旧数据
+
+**迁移步骤**：
+
+1. **增加数据库版本号**：
+   ```java
+   @Database(..., version = 2)  // 从 1 改为 2
+   ```
+
+2. **创建 Migration 类**：
+   ```java
+   static final Migration MIGRATION_1_2 = new Migration(1, 2) {
+       @Override
+       public void migrate(SupportSQLiteDatabase database) {
+           // 添加新字段
+           database.execSQL("ALTER TABLE users ADD COLUMN nickname TEXT");
+       }
+   };
+   ```
+
+3. **应用 Migration**：
+   ```java
+   .addMigrations(MIGRATION_1_2)
+   ```
+
+#### 3.4.7 验证数据库是否正常工作
+
+**方法 1：查看日志**
+
+运行应用后，在 Logcat 中搜索 "Database" 或 "Room"：
+- 如果看到 "数据库创建成功" 或类似日志，说明数据库正常
+- 如果看到错误信息，检查配置是否正确
+
+**方法 2：测试数据操作**
+
+在代码中添加测试代码：
+```java
+// 测试插入用户
+UserRepository repository = new UserRepository(context);
+UserEntity testUser = new UserEntity("test@example.com", "123456", "测试用户");
+repository.insertOrUpdateUser(testUser)
+    .subscribe(
+        () -> Log.d("Test", "✅ 数据库测试成功"),
+        error -> Log.e("Test", "❌ 数据库测试失败", error)
+    );
+```
+
+**方法 3：使用数据库查看工具**
+
+1. 导出数据库文件到电脑
+2. 使用 SQLite 查看工具（如 DB Browser for SQLite）打开
+3. 查看表结构和数据
+
+#### 3.4.8 常见问题
+
+**问题 1：数据库文件未创建**
+
+**原因**：
+- 应用未运行
+- 数据库初始化失败
+
+**解决方法**：
+1. 确保应用已运行至少一次
+2. 检查 `AppDatabase.java` 中的配置是否正确
+3. 查看 Logcat 中的错误信息
+
+**问题 2：Room 编译错误**
+
+**原因**：
+- 缺少 `kapt` 插件
+- `room-compiler` 依赖未正确配置
+
+**解决方法**：
+1. 检查 `app/build.gradle.kts` 中是否包含：
+   ```kotlin
+   plugins {
+       alias(libs.plugins.kotlin.kapt)
+   }
+   dependencies {
+       kapt(libs.room.compiler)
+   }
+   ```
+2. 同步 Gradle：`File` → `Sync Project with Gradle Files`
+3. 清理项目：`Build` → `Clean Project`
+
+**问题 3：数据丢失**
+
+**原因**：
+- 使用了 `fallbackToDestructiveMigration()`
+- 数据库版本号改变
+
+**解决方法**：
+- 开发环境：这是正常行为，数据会被清空
+- 生产环境：实现 `Migration` 类来保留数据
+
+**问题 4：查询返回空数据**
+
+**原因**：
+- 数据未插入
+- 查询条件错误
+
+**解决方法**：
+1. 检查数据是否已插入（使用数据库查看工具）
+2. 检查查询条件是否正确
+3. 查看 Logcat 中的查询日志
+
+#### 3.4.9 数据库最佳实践
+
+1. **使用后台线程**：
+   - 生产环境必须在后台线程执行数据库操作
+   - 使用 RxJava 的 `subscribeOn(Schedulers.io())`
+
+2. **及时关闭连接**：
+   - 应用退出时调用 `AppDatabase.closeDatabase()`
+   - 避免内存泄漏
+
+3. **数据备份**：
+   - 定期备份重要数据
+   - 使用 Room 的导出功能
+
+4. **性能优化**：
+   - 使用索引加速查询（已在 Entity 中定义）
+   - 避免在主线程执行耗时操作
+   - 使用批量插入提高效率
+
+#### 3.4.10 下一步
+
+配置完数据库后：
+1. ✅ 运行应用，确认数据库文件已创建
+2. ✅ 测试数据插入和查询功能
+3. ✅ 查看 Logcat 确认没有错误
+4. ✅ 继续开发其他功能
 
 ## 4. 构建项目
 
@@ -236,9 +696,154 @@ cd DreamAIChat_APP
 3. 检查 API 服务器是否可访问
 4. 查看 Logcat 中的错误信息
 
-## 7. 配置说明
+## 7. 图片资源配置
 
-### 7.1 网络权限
+### 7.1 应用图标位置
+
+应用图标需要放在以下目录中，每个密度都需要提供对应尺寸的图标：
+
+**项目路径**: `app/src/main/res/`
+
+#### 7.1.1 应用启动图标 (mipmap 目录)
+
+应用启动图标需要放在以下目录，每个目录对应不同的屏幕密度：
+
+1. **mipmap-mdpi/** (48x48 dp)
+   - 文件: `ic_launcher.png` 和 `ic_launcher_round.png`
+   - 实际尺寸: 48x48 像素
+   - 完整路径: `app/src/main/res/mipmap-mdpi/ic_launcher.png`
+
+2. **mipmap-hdpi/** (72x72 dp)
+   - 文件: `ic_launcher.png` 和 `ic_launcher_round.png`
+   - 实际尺寸: 72x72 像素
+   - 完整路径: `app/src/main/res/mipmap-hdpi/ic_launcher.png`
+
+3. **mipmap-xhdpi/** (96x96 dp)
+   - 文件: `ic_launcher.png` 和 `ic_launcher_round.png`
+   - 实际尺寸: 96x96 像素
+   - 完整路径: `app/src/main/res/mipmap-xhdpi/ic_launcher.png`
+
+4. **mipmap-xxhdpi/** (144x144 dp)
+   - 文件: `ic_launcher.png` 和 `ic_launcher_round.png`
+   - 实际尺寸: 144x144 像素
+   - 完整路径: `app/src/main/res/mipmap-xxhdpi/ic_launcher.png`
+
+5. **mipmap-xxxhdpi/** (192x192 dp)
+   - 文件: `ic_launcher.png` 和 `ic_launcher_round.png`
+   - 实际尺寸: 192x192 像素
+   - 完整路径: `app/src/main/res/mipmap-xxxhdpi/ic_launcher.png`
+
+6. **mipmap-anydpi-v26/** (自适应图标，Android 8.0+)
+   - 文件: `ic_launcher.xml` 和 `ic_launcher_round.xml`
+   - 这些是 XML 文件，定义了自适应图标的背景和前景
+   - 完整路径: `app/src/main/res/mipmap-anydpi-v26/ic_launcher.xml`
+
+#### 7.1.2 自适应图标资源 (drawable 目录)
+
+自适应图标需要以下资源文件：
+
+1. **drawable/ic_launcher_background.xml**
+   - 完整路径: `app/src/main/res/drawable/ic_launcher_background.xml`
+   - 这是图标的背景层（通常是纯色或渐变）
+
+2. **drawable-v24/ic_launcher_foreground.xml**
+   - 完整路径: `app/src/main/res/drawable-v24/ic_launcher_foreground.xml`
+   - 这是图标的前景层（通常是应用 Logo）
+
+### 7.2 如何替换应用图标
+
+#### 方法一：使用 Android Studio 的 Image Asset Studio（推荐）
+
+1. 在 Android Studio 中，右键点击 `res` 文件夹
+2. 选择 `New` → `Image Asset`
+3. 在 `Icon Type` 中选择 `Launcher Icons (Adaptive and Legacy)`
+4. 选择你的图标图片（建议使用 1024x1024 像素的 PNG 图片）
+5. 调整前景和背景
+6. 点击 `Next` → `Finish`
+7. Android Studio 会自动生成所有需要的图标文件
+
+#### 方法二：手动替换
+
+1. **准备图标文件**
+   - 准备一个 1024x1024 像素的 PNG 图标（透明背景）
+   - 使用在线工具（如 [Android Asset Studio](https://romannurik.github.io/AndroidAssetStudio/icons-launcher.html)）生成不同密度的图标
+
+2. **替换文件**
+   - 将生成的图标文件复制到对应的 `mipmap-*` 目录
+   - 确保文件名正确：`ic_launcher.png` 和 `ic_launcher_round.png`
+
+3. **更新自适应图标**（可选，Android 8.0+）
+   - 编辑 `drawable/ic_launcher_background.xml` 设置背景色
+   - 编辑 `drawable-v24/ic_launcher_foreground.xml` 设置前景图标
+
+### 7.3 其他图片资源位置
+
+#### 7.3.1 Drawable 资源
+
+用于界面中的图标、按钮背景等：
+
+- **位置**: `app/src/main/res/drawable/`
+- **支持格式**: PNG, JPG, XML (Vector Drawable), WebP
+- **命名规则**: 小写字母、数字、下划线，不能以数字开头
+- **示例**: 
+  - `app/src/main/res/drawable/ic_menu.png`
+  - `app/src/main/res/drawable/button_background.xml`
+
+#### 7.3.2 不同密度的 Drawable
+
+如果需要为不同屏幕密度提供不同尺寸的图片：
+
+- **drawable-mdpi/**: 中等密度 (160 dpi)
+- **drawable-hdpi/**: 高密度 (240 dpi)
+- **drawable-xhdpi/**: 超高密度 (320 dpi)
+- **drawable-xxhdpi/**: 超超高密度 (480 dpi)
+- **drawable-xxxhdpi/**: 超超超高密度 (640 dpi)
+
+#### 7.3.3 推荐图片尺寸
+
+| 用途 | 推荐尺寸 | 格式 | 位置 |
+|------|---------|------|------|
+| 应用图标 | 1024x1024 | PNG | mipmap-* |
+| 界面图标 | 24x24, 48x48 dp | PNG/SVG | drawable |
+| 启动页图片 | 1080x1920 | PNG/JPG | drawable |
+| 背景图片 | 根据设计 | PNG/JPG/WebP | drawable |
+
+### 7.4 图片资源优化建议
+
+1. **使用 WebP 格式**: 比 PNG 体积更小，质量更好
+2. **使用 Vector Drawable**: 对于简单图标，使用 XML 格式的矢量图
+3. **压缩图片**: 使用工具（如 TinyPNG）压缩图片
+4. **按需提供**: 只为需要的密度提供图片，避免 APK 体积过大
+
+## 8. XML 文件问题排查
+
+### 8.1 "Valid XML document must have a root tag" 错误
+
+如果遇到此错误，请检查以下内容：
+
+1. **检查 XML 文件是否完整**
+   - 确保每个 XML 文件都有正确的根标签
+   - 确保 XML 文件没有被截断
+
+2. **常见问题文件**
+   - `app/src/main/res/xml/data_extraction_rules.xml`
+   - `app/src/main/res/xml/backup_rules.xml`
+   - `app/src/main/res/mipmap-anydpi-v26/ic_launcher.xml`
+   - `app/src/main/res/mipmap-anydpi-v26/ic_launcher_round.xml`
+
+3. **解决方法**
+   - 在 Android Studio 中，选择 `File` → `Invalidate Caches / Restart`
+   - 清理项目: `Build` → `Clean Project`
+   - 重新构建: `Build` → `Rebuild Project`
+
+4. **验证 XML 文件**
+   - 确保所有 XML 文件都以 `<?xml version="1.0" encoding="utf-8"?>` 开头
+   - 确保有且仅有一个根元素
+   - 确保所有标签都正确闭合
+
+## 9. 配置说明
+
+### 9.1 网络权限
 
 确保 `AndroidManifest.xml` 中包含网络权限:
 
@@ -247,7 +852,7 @@ cd DreamAIChat_APP
 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 ```
 
-### 7.2 应用配置
+### 9.2 应用配置
 
 **应用 ID**: `com.example.dreamaichat_app`
 
@@ -263,7 +868,7 @@ defaultConfig {
 - Version Code: 1
 - Version Name: "1.0"
 
-### 7.3 签名配置（Release 构建）
+### 9.3 签名配置（Release 构建）
 
 1. **生成密钥库**
    ```bash
@@ -291,16 +896,16 @@ defaultConfig {
    }
    ```
 
-## 8. 开发建议
+## 10. 开发建议
 
-### 8.1 代码规范
+### 10.1 代码规范
 
 - 遵循 Java 编码规范
 - 使用有意义的变量和方法名
 - 添加必要的注释
 - 保持代码简洁
 
-### 8.2 调试技巧
+### 10.2 调试技巧
 
 1. **使用 Logcat**
    - 查看应用日志
@@ -317,7 +922,7 @@ defaultConfig {
    - 监控内存使用
    - 监控网络请求
 
-### 8.3 测试
+### 10.3 测试
 
 1. **单元测试**
    - 测试 UseCase 和 Repository
@@ -327,9 +932,9 @@ defaultConfig {
    - 使用 Espresso 进行 UI 测试
    - 测试关键用户流程
 
-## 9. 发布准备
+## 11. 发布准备
 
-### 9.1 代码混淆
+### 11.1 代码混淆
 
 在 `app/proguard-rules.pro` 中添加混淆规则:
 
@@ -346,7 +951,7 @@ defaultConfig {
 -keep @androidx.room.Entity class *
 ```
 
-### 9.2 资源优化
+### 11.2 资源优化
 
 1. **移除未使用的资源**
    ```bash
@@ -357,7 +962,7 @@ defaultConfig {
    - 使用 WebP 格式
    - 使用适当的图片尺寸
 
-### 9.3 性能优化
+### 11.3 性能优化
 
 1. **启用 ProGuard**
    ```kotlin
@@ -378,7 +983,7 @@ defaultConfig {
    }
    ```
 
-## 10. 后续步骤
+## 12. 后续步骤
 
 1. **实现剩余功能**
    - 完善聊天界面功能
@@ -401,14 +1006,13 @@ defaultConfig {
    - 性能优化
    - 内存泄漏检查
 
-## 11. 技术支持
+## 13. 技术支持
 
 如遇到问题，请：
 
 1. 查看项目文档
 2. 检查 Logcat 日志
 3. 参考 Android 官方文档
-4. 联系开发团队
 
 ---
 
