--- a/vibe_coding实践文档/故障排查及解决文档.md
+++ b/vibe_coding实践文档/故障排查及解决文档.md
@@ -356,6 +356,58 @@ OkHttpClient okHttpClient = new OkHttpClient.Builder()
 
 ---
 
+## 历史会话仅显示最后一轮对话
+
+### 问题描述
+
+在与大模型进行了多轮对话后，返回历史列表再次进入会话，界面只显示“最后一次”用户与 AI 的来回，其余内容全部丢失。
+
+**错误表现**：
+- 历史会话界面只看到最新的两条消息
+- Logcat 中无报错，但本地提示“本地保存聊天记录失败：FOREIGN KEY constraint failed”
+
+### 错误原因
+
+Room 中的 `messages` 表配置了指向 `conversations` 的外键。我们在 `ConversationDao` 上使用了 `OnConflictStrategy.REPLACE`，每次更新会话信息时会删除旧行并重新插入，级联删除会把之前的所有消息都清空，最终只剩下最近一次插入的两条消息。
+
+### 解决方案
+
+1. 将 `ConversationDao.insertConversation` 的策略改为 `OnConflictStrategy.IGNORE`，避免删除旧记录
+2. 新增 `updateConversationMeta`，在需要更新标题/模型/最后消息时执行 `UPDATE` 而不是 `REPLACE`
+3. `ConversationRepository.insertOrUpdateConversation` 先 `insert`（忽略重复）再调用 `updateConversationMeta`
+4. `ChatViewModel` 的 `persistConversationAndMessages` 每次成功发送后同时写入 `ConversationEntity` 和两条 `MessageEntity`
+
+**相关文件**：
+- `app/src/main/java/com/example/dreamaichat_app/data/dao/ConversationDao.java`
+- `app/src/main/java/com/example/dreamaichat_app/data/repository/ConversationRepository.java`
+- `app/src/main/java/com/example/dreamaichat_app/ui/chat/ChatViewModel.java`
+
+**发生时间**：2025-12-01
+
+---
+
+## 对话时间显示不准确 / 聊天气泡重复展示时间
+
+### 问题描述
+
+1. 聊天界面中，每条气泡下方都会重复显示发送时间，信息拥挤
+2. 历史会话列表的时间存在 8 小时偏差，展示的时间与用户所在时区不一致
+
+### 解决方案
+
+1. 移除聊天气泡中的时间 TextView，仅保留消息内容与状态（`item_message_ai.xml`、`item_message_user.xml`、`ChatMessageAdapter.java`）
+2. 历史会话列表统一使用 `Asia/Shanghai` 时区格式化时间，保证“第一次对话时间”显示正确（`ConversationAdapter.java`）
+
+**相关文件**：
+- `app/src/main/res/layout/item_message_ai.xml`
+- `app/src/main/res/layout/item_message_user.xml`
+- `app/src/main/java/com/example/dreamaichat_app/ui/chat/adapter/ChatMessageAdapter.java`
+- `app/src/main/java/com/example/dreamaichat_app/ui/history/adapter/ConversationAdapter.java`
+
+**发生时间**：2025-12-01
+
+---
+
 ## 更新日志
 
 - **2025-11-28**：
