--- a/vibe_coding实践文档/故障排查及解决文档.md
+++ b/vibe_coding实践文档/故障排查及解决文档.md
@@ -408,6 +408,105 @@ Room 中的 `messages` 表配置了指向 `conversations` 的外键。我们在 
 
 ---
 
+## 历史页“开始对话”按钮无响应
+
+### 问题描述
+
+首次注册或登录后进入历史页可能看到“还没有对话”的空态提示，点击“开始对话”按钮却不会跳回聊天页，导致无法发起第一轮对话。
+
+### 错误原因
+
+空态按钮仅调用 `FragmentManager.popBackStack()`，但历史页是通过底部导航切换的 Fragment，并未加入返回栈。结果既不会切换 Fragment，也没有真正创建新的会话。
+
+### 解决方案
+
+1. 在 `HistoryFragment` 中使用 `MainActivity` 实例获取共享的 `ChatViewModel`
+2. 点击按钮时执行：
+   - `chatViewModel.startNewChat()` 创建新会话
+   - `mainActivity.showChatFragment()` 主动切换到聊天页
+
+**相关文件**：
+- `app/src/main/java/com/example/dreamaichat_app/ui/history/HistoryFragment.java`
+- `app/src/main/java/com/example/dreamaichat_app/ui/main/MainActivity.java`
+
+**发生时间**：2025-12-02
+
+---
+
+## 聊天页快捷 Chip / 图片预览遮挡模型切换
+
+### 问题描述
+
+“总结内容”“润色文案”等快捷 Chip，以及多图预览缩略图会漂到屏幕上方，把模型切换区域盖住；发送消息后整个列表只剩灰色背景，看不到任何气泡。
+
+### 错误原因
+
+`rvMessages` 的底部约束仍然连到 `chipGroup`，而 `chipGroup` 又锚定到输入栏上方。当附件预览隐藏或高度变化时，ConstraintLayout 解算失败，导致 `rvMessages` 被压到 0 高度并把 Chip 推到顶部。
+
+### 解决方案
+
+1. 引入 `action_container`（垂直 LinearLayout），容纳附件预览 `HorizontalScrollView` 与 `ChipGroup`
+2. `rvMessages` 的底部约束改为 `@id/action_container`
+3. 附件预览内部的 `LinearLayout` 仅负责横向列表，和输入栏解耦
+
+**相关文件**：
+- `app/src/main/res/layout/fragment_chat.xml`
+
+**发生时间**：2025-12-02
+
+---
+
+## 发送图片后看不到任何气泡
+
+### 问题描述
+
+选择多张图片后点击“发送”，界面既没有自己的消息气泡，也没有 AI 回复，仿佛请求失败。
+
+### 错误原因
+
+1. 旧逻辑在图片选中时立刻发请求，未等待“发送”按钮，造成空文本被提交
+2. RecyclerView 受上一节的约束问题影响，高度被压缩为 0，视觉上等于“没有消息”
+3. `ChatMessageAdapter` 对附件处理只支持单张，未正确渲染多图
+
+### 解决方案
+
+1. `ChatFragment` 改用 `ActivityResultContracts.GetMultipleContents()`，把 URI 交给 `ChatViewModel` 缓存，点击“发送”以后再统一拼装到 `ChatRequest.images`
+2. `ChatMessageAdapter` 在 `attachment_container` 中为每张图片生成 `ImageView`，`match_parent` + `fitCenter`
+3. 修复布局约束（上一节）
+
+**相关文件**：
+- `app/src/main/java/com/example/dreamaichat_app/ui/chat/ChatFragment.java`
+- `app/src/main/java/com/example/dreamaichat_app/ui/chat/ChatViewModel.java`
+- `app/src/main/java/com/example/dreamaichat_app/ui/chat/adapter/ChatMessageAdapter.java`
+- `app/src/main/res/layout/fragment_chat.xml`
+
+**发生时间**：2025-12-02
+
+---
+
+## Toast 中文提示出现乱码
+
+### 问题描述
+
+点击抽屉菜单（模板中心 / 模型路由 / 对话图谱）或工具栏“新对话”时，Toast 内容显示为“宸插垱寤烘柊瀵硅瘽”等乱码。
+
+### 错误原因
+
+这些中文字符串直接硬编码在 `MainActivity` 中，源文件被保存为 ANSI 编码后再次转换成 UTF-8，导致字节序列损坏，最终在运行时渲染出乱码。
+
+### 解决方案
+
+1. 所有中文提示统一迁移到 `res/values/strings.xml`
+2. 代码侧全部改为 `Toast.makeText(this, getString(R.string.xxx), Toast.LENGTH_SHORT).show()`
+
+**相关文件**：
+- `app/src/main/java/com/example/dreamaichat_app/ui/main/MainActivity.java`
+- `app/src/main/res/values/strings.xml`
+
+**发生时间**：2025-12-02
+
+---
+
 ## 更新日志
 
 - **2025-11-28**：
