--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="chat_status_online">Dream · 在线</string>
     <string name="chat_input_hint">与Dream对话…</string>
     <string name="send">发送</string>
-    <string name="chat_generating">AI 正在生成回复…</string>
+    <string name="chat_generating">Dream 正在生成回复…</string>
     <string name="chat_attach_image">图片</string>
     <string name="chat_copy_content">复制回复</string>
     <string name="chat_remove_attachment">移除图片</string>
