--- a/核心技术文档/部署指南.md
+++ b/核心技术文档/部署指南.md
@@ -79,7 +79,7 @@ cd DreamAIChat_APP
 
 #### 3.3.1 什么是 API 地址？
 
-API 地址（也叫 Base URL）是你的后端服务器地址。当应用需要获取数据或发送数据时，会向这个地址发送 HTTP 请求。
+API 地址（也叫 Base URL）是我们的后端服务器地址。当应用需要获取数据或发送数据时，会向这个地址发送 HTTP 请求。
 
 **简单理解**：
 
@@ -932,78 +932,194 @@ repository.insertOrUpdateUser(testUser)
 
 ## 9. 图片资源配置
 
-> 本章把“图标在哪里”“如何一键替换”“替换后要检查什么”全部列清楚，新手也能按表完成所有替换。
+> 本章按“小白模式”写：只假设你手里有一堆 PNG 图片，没有 SVG、不会写 XML，也不了解各种 density 的概念。只要跟着步骤做，就能把 APP 里的图标全部换成你自己的。
 
-### 9.1 启动 / 桌面图标（mipmap + Adaptive）
+### 9.1 启动 / 桌面图标（只用 PNG 的完整步骤）
 
-- 位置：`app/src/main/res/mipmap-*`
-- 必须保留文件名：`ic_launcher.png`、`ic_launcher_round.png`
+#### 9.1.1 准备一张“大图标”PNG
 
-| 目录 | 像素 | 说明 |
-| --- | --- | --- |
-| `mipmap-mdpi/` | 48×48 | 低密度 |
-| `mipmap-hdpi/` | 72×72 | 高密度 |
-| `mipmap-xhdpi/` | 96×96 | 超高密度 |
-| `mipmap-xxhdpi/` | 144×144 | 超超高密度 |
-| `mipmap-xxxhdpi/` | 192×192 | 超超超高密度 |
-| `mipmap-anydpi-v26/` | XML | Android 8.0+ 自适应容器 |
+1. 准备一张 **方形** 的 PNG 图片，例如 1024×1024，背景最好是透明。
+2. 把它放到电脑某个你能找到的位置，比如：`D:\my_icons\app_logo.png`。
 
-自适应图标由两个图层组成：
+#### 9.1.2 用 Image Asset 一次性生成所有 mipmap 和 XML
 
-- `app/src/main/res/drawable/ic_launcher_background.xml`（背景色）
-- `app/src/main/res/drawable-v24/ic_launcher_foreground.xml`（LOGO）
+1. 打开 Android Studio，在左侧 `Project` 视图中找到 `app/src/main/res`。
+2. 在 `res` 上 **右键** → `New` → `Image Asset`。  
+3. 在弹出的窗口中：
+   - `Icon Type` 选择：**Launcher Icons (Adaptive and Legacy)**。
+   - `Name` 建议保持为：`ic_launcher`（默认），不要改名，这样不用动其他配置。
+4. 在 `Foreground Layer` 里：
+   - `Asset type` 选 **Image**。
+   - 点击右边的文件夹按钮，选择你刚才准备的 PNG（例如 `app_logo.png`）。
+   - 预览区会显示一个圆形/方形图标，如果图太大/太小，可以用下面的滑块调整缩放。
+5. 如果不想要复杂背景：
+   - 在 `Background Layer` 中，把 `Color` 改成你想要的纯色背景（比如白色或品牌色）。
+6. 一路点击 `Next` → `Finish`。
 
-> `AndroidManifest` 默认引用 `@mipmap/ic_launcher`，替换完素材重新编译即可生效。
+完成后，Android Studio 会自动帮你生成和覆盖：
 
-### 9.2 聊天界面图标 & 背景对照表
+- `mipmap-mdpi/ic_launcher.png`
+- `mipmap-hdpi/ic_launcher.png`
+- `mipmap-xhdpi/ic_launcher.png`
+- `mipmap-xxhdpi/ic_launcher.png`
+- `mipmap-xxxhdpi/ic_launcher.png`
+- `mipmap-anydpi-v26/ic_launcher.xml`
+- 以及 `ic_launcher_round` 系列和对应的 XML。
+
+> **重要**：这样做之后，我们**不需要自己改 XML**；那些 XML（包括你看到的 `ic_launcher.xml`）已经自动指向了你这张 PNG，Android 会自动处理各种分辨率和形状。
+
+#### 9.1.3 只想手动覆盖 PNG，不想用 Image Asset？
+
+不推荐，但如果你已经手动把 `mipmap-*` 里的 PNG 都换了，只剩 XML 不会改，可以这样理解：
+
+- `mipmap-anydpi-v26/ic_launcher.xml` 是一个“配置文件”，里面只是告诉系统“前景图用哪个图片、背景用哪个图片”。
+- 最简单的方式仍然是用 **9.1.2 的 Image Asset** 再跑一遍，这样会自动重写 XML，避免手工修改出错。
+
+如果你坚持手动，不想重新跑 Image Asset，可以记住一句话：  
+**“不要随便删或改 ic_launcher.xml 的结构，宁可用 Image Asset 重建。”**  
+这样最安全、也最省心。
+
+### 9.2 聊天界面 & 导航图标对照表（都可以换成 PNG）
 
 | 资源 | 目录 | 使用场景 | 引用文件 | 替换建议 |
 | --- | --- | --- | --- | --- |
-| `ic_attach.xml` | `drawable/` | 输入框“图片”按钮 | `fragment_chat.xml` | 24dp SVG，保持描边宽度 |
-| `ic_copy_16.xml` | `drawable/` | AI 气泡复制按钮 | `item_message_ai.xml` | 16–20dp，避免遮挡文本 |
-| `ic_chevron_down.xml` | `drawable/` | 模型切换箭头 | `fragment_chat.xml`（模型 header） | 仅改色可直接调 `fillColor` |
-| `ic_ai_avatar_placeholder.xml` | `drawable/` | AI 头像占位 | `item_message_ai.xml` | 可替换为品牌形象 |
-| `ic_pin_indicator.xml` | `drawable/` | 历史置顶提示 | `item_conversation.xml` | 16dp 以内 |
-| `ic_close_24.xml` | `drawable/` | 附件缩略图删除 | `item_attachment_preview.xml` | 可换圆形/叉号 |
-| `ic_menu_24.xml` | `drawable/` | Toolbar 抽屉图标 | `activity_main.xml` | 换 LOGO 时别忘了 contentDescription |
-| `bg_model_tag.xml` | `drawable/` (Shape) | 模型标签背景 | `fragment_chat.xml`、`item_conversation.xml` | 直接改颜色/圆角 |
-| `bg_system_message.xml` | `drawable/` (Shape) | “正在生成”提示 & 附件卡片 | `fragment_chat.xml` | 可改渐变或阴影 |
-| `divider_attachment_preview.xml` | `drawable/` (Shape) | 附件分隔线 | `fragment_chat.xml` | 透明即可隐藏 |
+| `ic_attach` | `drawable/` | 输入框“图片”按钮 | `fragment_chat.xml` | 小图标，24dp，适合用简单 PNG |
+| `ic_copy_16` | `drawable/` | AI 气泡复制按钮 | `item_message_ai.xml` | 16–20dp，避免遮挡文本 |
+| `ic_chevron_down` | `drawable/` | 模型切换箭头 | `fragment_chat.xml`（模型 header） | 仅改色可在 XML 里调 `fillColor` |
+| `ic_ai_avatar_placeholder` | `drawable/` | AI 头像占位 | `item_message_ai.xml` | 可替换为品牌角色头像 |
+| `ic_pin_indicator` | `drawable/` | 历史置顶提示 | `item_conversation.xml` | 16dp 以内的小钉子图标 |
+| `ic_close_24` | `drawable/` | 附件缩略图删除 | `item_attachment_preview.xml` | 建议用简单叉号/垃圾桶图 |
+| `ic_menu_24` | `drawable/` | Toolbar 左上角抽屉图标 | `activity_main.xml` | 可改为品牌 LOGO |
+| `bg_model_tag` | `drawable/` (Shape) | 模型标签背景 | `fragment_chat.xml`、`item_conversation.xml` | 改颜色/圆角即可 |
+| `bg_system_message` | `drawable/` (Shape) | “正在生成”提示 & 附件卡片 | `fragment_chat.xml` | 改成你喜欢的气泡样式 |
+| `divider_attachment_preview` | `drawable/` (Shape) | 附件分隔线 | `fragment_chat.xml` | 想去掉分隔线就设为透明 |
+| `ic_tab_chat` | `drawable/` | 底部 TabBar“聊天”图标 | `bottom_navigation.xml` | 建议用聊天气泡相关 PNG |
+| `ic_tab_history` | `drawable/` | 底部 TabBar“历史”图标 | `bottom_navigation.xml` | 用时钟/列表类图标 |
+| `ic_tab_profile` | `drawable/` | 底部 TabBar“我的”图标 | `bottom_navigation.xml` | 用头像/用户轮廓图标 |
+| `ic_toolbar_new_chat` | `drawable/` | 顶部“新对话”按钮 | `toolbar_menu.xml` | 可用“+”或“新建”相关图标 |
+| `ic_toolbar_settings` | `drawable/` | 顶部“设置”按钮 | `toolbar_menu.xml` | 用齿轮类 PNG |
+| `ic_nav_templates` | `drawable/` | 侧边栏“对话模板” | `nav_drawer.xml` | 用文档/列表类图标 |
+| `ic_nav_routing` | `drawable/` | 侧边栏“智能路由” | `nav_drawer.xml` | 用分支/箭头类图标 |
+| `ic_nav_graph` | `drawable/` | 侧边栏“对话图谱” | `nav_drawer.xml` | 用网络/图谱类图标 |
+| `ic_nav_settings` | `drawable/` | 侧边栏“设置” | `nav_drawer.xml` | 同样用齿轮图标 |
+| `ic_nav_logout` | `drawable/` | 侧边栏“退出登录” | `nav_drawer.xml` | 用门/退出箭头等红色图标 |
 
 按表替换同名文件即可，布局引用无需改动。
 
-### 9.3 图标替换实操流程
+### 9.3 用 PNG 一步步替换所有界面图标（实战教程）
 
-1. **确认类型**：桌面图标（mipmap）还是界面图标（drawable）
-2. **准备素材**：
-   - 启动图标：1024×1024 PNG/SVG，透明背景
-   - 界面图标：优先 SVG，不能矢量化时用 48×48 PNG 并在 AS 中转 Vector
-3. **导入方式**：
-   - Android Studio → `New` → `Image Asset / Vector Asset`，输出到目标文件名
-   - 或者手动把 SVG/XML 覆盖到 `drawable/`
-4. **构建验证**：
-   - `Build` → `Rebuild Project`
-   - 安装到手机，检查：桌面图标、聊天页、历史页、导航抽屉是否全部显示为新样式
+这里以几类典型图标为例：**聊天区域按钮**、**底部 TabBar 图标**、**顶部工具栏按钮**、**侧边栏菜单图标**。所有图标的本质操作是一样的：用 Image Asset 把对应的 `ic_xxx` 名称替换成你的 PNG。
 
-### 9.4 其他图片资源及尺寸
+#### 9.3.1 替换聊天输入框的“图片”按钮图标（ic_attach）
 
-- `drawable-mdpi/`、`drawable-hdpi/` ...：需要不同密度 PNG 时，把同名文件放到对应目录即可
-- 常用尺寸参考：
+1. 在电脑上准备一张小图标 PNG，比如 96×96 或 128×128，放在 `D:\my_icons\attach.png`。
+2. 在 Android Studio 左侧 `Project` 面板中：
+   - 展开 `app/src/main/res/drawable/`
+   - 找到 `ic_attach.xml`。
+3. 右键 `drawable` 目录 → `New` → `Image Asset`（有些版本是 `New` → `Vector Asset`，不影响）。
+4. 在弹窗中：
+   - `Icon Type` 选择 **Action Bar and Tab Icons** 或 **Launcher Icons (Legacy Only)**（都可以，本质是生成一个小图标）。
+   - `Name` 填写：**ic_attach**（一定要和原来的文件名一样，这样布局不用改）。
+   - 源图选择你的 `attach.png`。
+   - 大小一般选 24dp 或 32dp，预览里看着合适即可。
+5. 点击 `Next` → `Finish`。  
+   Android Studio 会自动在 `drawable/` 下生成或覆盖 `ic_attach.png` / `ic_attach.xml` 等资源，布局里引用的 `@drawable/ic_attach` 自动变成你的图标。
+
+#### 9.3.2 替换 AI 头像占位图标（ic_ai_avatar_placeholder）
+
+步骤和上面几乎一模一样：
+
+1. 准备 PNG，比如 128×128，放到一个易找的目录。
+2. 右键 `drawable` → `New` → `Image Asset`。
+3. `Name` 填：**ic_ai_avatar_placeholder**。
+4. 选择你的 PNG，调整大小，`Finish`。
+
+> 你可以对照 9.2 表格，把其中所有的 `ic_xxx` 图标都按这一套方法换一遍，只要**名字不改**，布局和代码就都不用动。
+
+#### 9.3.3 替换底部 TabBar 图标（聊天 / 历史 / 我的）
+
+对应的资源名分别是：
+
+- `ic_tab_chat`    → 底部“聊天”图标
+- `ic_tab_history` → 底部“历史”图标
+- `ic_tab_profile` → 底部“我的”图标
+
+操作步骤和前面完全一样，只是 **Name 改成对应名字**：
+
+1. 准备 3 张 PNG（建议 96×96 或 128×128），比如 `tab_chat.png` / `tab_history.png` / `tab_profile.png`。
+2. 右键 `drawable` → `New` → `Image Asset`。
+3. `Icon Type` 选择 Action Bar / 小图标类型即可。
+4. 第一次：
+   - `Name` 填：`ic_tab_chat`
+   - 选择 `tab_chat.png`。
+5. 第二次：
+   - `Name` 填：`ic_tab_history`
+   - 选择 `tab_history.png`。
+6. 第三次：
+   - `Name` 填：`ic_tab_profile`
+   - 选择 `tab_profile.png`。
+
+由于 `bottom_navigation.xml` 里已经改成引用 `@drawable/ic_tab_chat` 等，这样三步做完，底部三个 Tab 的图标就全部换成你的 PNG 了。
+
+#### 9.3.4 替换顶部工具栏“新对话 / 设置”图标
+
+对应的资源名：
+
+- `ic_toolbar_new_chat`  → 顶部“新对话”按钮
+- `ic_toolbar_settings`  → 顶部“设置”按钮
+
+步骤同上：
+
+1. 准备 2 张 PNG（比如“加号”图和“齿轮”图）。
+2. 用 Image Asset 生成：
+   - Name = `ic_toolbar_new_chat`  → 选新对话图标 PNG。
+   - Name = `ic_toolbar_settings`  → 选设置图标 PNG。
+
+`toolbar_menu.xml` 里已经用的是这两个名字，替换后重建即可生效。
+
+#### 9.3.5 替换“我的”侧边栏菜单图标（模板 / 路由 / 图谱 / 设置 / 退出）
+
+对应的资源名：
+
+- `ic_nav_templates` → “对话模板”
+- `ic_nav_routing`   → “智能路由”
+- `ic_nav_graph`     → “对话图谱”
+- `ic_nav_settings`  → “设置”
+- `ic_nav_logout`    → “退出登录”
+
+同样一人一遍 Image Asset：
+
+1. 准备 5 张 PNG（文档、分支箭头、网络图、齿轮、退出箭头/门等）。
+2. 右键 `drawable` → `New` → `Image Asset`。
+3. 按上面 5 个名字分别导入：
+   - Name = `ic_nav_templates`  → 选模板 PNG。
+   - Name = `ic_nav_routing`   → 选路由 PNG。
+   - Name = `ic_nav_graph`     → 选图谱 PNG。
+   - Name = `ic_nav_settings`  → 选设置 PNG。
+   - Name = `ic_nav_logout`    → 选退出 PNG。
+
+`nav_drawer.xml` 中已经改为这些资源名，导入完成后，打开侧边栏就能看到替换后的效果。
+
+### 9.4 其他图片资源及尺寸（简单记）
+
+- 如果你有整屏插画（比如空白页的大图），只要放到 `drawable/` 目录，命名成好记的名字，比如 `empty_state.png`，然后在对应布局（如 `fragment_history.xml`）里把 `android:text="😔"` 改成一个 `ImageView` 引用你的 `@drawable/empty_state` 即可。
+- 常用尺寸建议：
 
 | 用途 | 推荐尺寸 | 目录 |
 | --- | --- | --- |
 | 启动页/空态插画 | 1080×1920 PNG/WebP | `drawable/` |
 | 用户/AI 头像 | 64×64 PNG | `drawable/` |
-| 聊天气泡背景 | Shape XML | `drawable/` |
+| 小按钮图标 | 96×96 PNG | 通过 Image Asset 生成 24dp 图标 |
+| 聊天气泡背景 | 建议用 Shape XML（不用 PNG） | `drawable/` |
 
-### 9.5 更换图标 Checklist
+### 9.5 更换图标 Checklist（照着勾就行）
 
-1. 记录要替换的资源名称（参考 9.2）
-2. 备份当前 `drawable/`、`mipmap/`（或直接依赖 Git）
-3. 批量导入新 SVG/PNG，保持文件名一致
-4. 需要调整颜色时优先使用 `android:tint` / `android:fillColor`
-5. `Build` → `Rebuild Project` → 真机/模拟器逐屏自检
-6. 把更新后的 `res/` 目录提交到 Git
+1. **桌面图标**：按 9.1.2 用 Image Asset 跑一遍 `ic_launcher`。
+2. **聊天页图标**：按 9.3.1、9.3.2 的方法，把 9.2 表格中所有 `ic_xxx` 都替换一遍。
+3. **其他插画**：把 PNG 放到 `drawable/`，修改对应布局里的 `@drawable/...` 引用。
+4. `Build` → `Rebuild Project`。
+5. 真机/模拟器自测：桌面、聊天页、历史页、抽屉菜单是否都显示为你的素材。
+6. 把 `res/` 里的改动提交到 Git。
 
 ### 9.6 常见问题 FAQ
 
@@ -1013,6 +1129,7 @@ repository.insertOrUpdateUser(testUser)
 | SVG 导入失败 | 文件包含 `clipPath` / `mask` | 用 Illustrator 重新导出“简单路径”版或转成 PNG |
 | 颜色不对 | 布局层设置了 `android:tint` | 同步修改布局里的 `tint`，或去掉 `tint` 直接在矢量里设色 |
 | APK 体积暴增 | 导入了多套大图 | 改用 SVG/WebP，删除未使用的密度变体 |
+
 
 
 ## 10. XML 文件问题排查
