--- a/vibe_coding实践文档/故障排查及解决文档.md
+++ b/vibe_coding实践文档/故障排查及解决文档.md
@@ -260,6 +260,159 @@ OkHttpClient okHttpClient = new OkHttpClient.Builder()
 
 ---
 
+### Android 资源缺失：`color/secondary not found`
+
+**错误信息**：
+
+```
+Android resource linking failed
+com.example.dreamaichat_app-main-51:/drawable/ic_nav_routing.xml:8: error: resource color/secondary (aka com.example.dreamaichat_app:color/secondary) not found.
+com.example.dreamaichat_app-main-51:/drawable/ic_tab_history.xml:7: error: resource color/secondary (aka com.example.dreamaichat_app:color/secondary) not found.
+error: failed linking file resources.
+```
+
+**问题分析**：
+
+- 部分矢量图标（如 `ic_nav_routing.xml`、`ic_tab_history.xml`）引用了 `@color/secondary`，但在 `colors.xml` 中没有定义该颜色；
+- 导致 `:app:processDebugResources` 步骤资源链接失败，整个 APK 无法构建。
+
+**解决方案**：
+
+在 `app/src/main/res/values/colors.xml` 中补充一个兼容性的 `secondary` 颜色，并指向已有的浅主色：
+
+```xml
+<color name="secondary">@color/primary_light</color>
+```
+
+这样既不会改变现有配色风格，又可以避免构建时因为缺少 `@color/secondary` 而失败。
+
+**验证修复**：
+
+1. 在 Android Studio 中执行 `Build` → `Rebuild Project`；
+2. 或在命令行执行：
+   ```powershell
+   .\gradlew.bat :app:assembleDebug
+   ```
+3. 如果不再出现 `color/secondary not found` 的错误，即修复成功。
+
+**相关文件**：
+
+- `app/src/main/res/values/colors.xml`
+- `app/src/main/res/drawable/ic_nav_routing.xml`
+- `app/src/main/res/drawable/ic_tab_history.xml`
+
+**发生时间**：2025-12-02
+
+---
+
+## 依赖问题排查（整合自《依赖问题排查指南》）
+
+### 问题：Cannot resolve symbol 'HttpLoggingInterceptor' 等依赖无法解析
+
+**常见原因**：
+
+1. Gradle 同步未完成，依赖尚未下载；
+2. Android Studio 索引/缓存异常；
+3. 网络或仓库问题导致依赖下载失败；
+4. `build.gradle` 或仓库配置错误。
+
+### 解决步骤（建议按顺序执行）
+
+#### 步骤 1：强制同步 Gradle
+
+- 点击工具栏“大象+刷新”图标或菜单 `File` → `Sync Project with Gradle Files`；
+- 也可以在右侧 `Gradle` 面板中点击刷新（🔄）；
+- 等待底部状态栏显示 `Gradle build finished`。
+
+#### 步骤 2：清理并重新构建
+
+1. `Build` → `Clean Project`；
+2. 然后 `Build` → `Rebuild Project`；
+3. 观察 `Build` 面板中是否还有依赖相关错误。
+
+#### 步骤 3：清理 IDE 缓存
+
+1. `File` → `Invalidate Caches / Restart`；
+2. 选择 `Invalidate and Restart`；
+3. 重启后再次执行 Gradle 同步（步骤 1）。
+
+#### 步骤 4：检查依赖是否真正下载成功
+
+- 在右侧 `Gradle` 面板中执行 `app` → `Tasks` → `android` → `dependencies`；
+- 检查输出，确认关键依赖（如 Retrofit、OkHttp、logging 拦截器等）都在依赖树中；
+- 本地缓存一般位于：`C:\Users\<你的用户名>\.gradle\caches\modules-2\files-2.1\`。
+
+#### 步骤 5：人工核对依赖声明
+
+1. 打开 `app/build.gradle` 或 `app/build.gradle.kts`：
+   - 确认 `implementation("com.squareup.okhttp3:logging-interceptor:xxx")` 等依赖已经声明；
+   - 版本号与其他 OkHttp/Retrofit 依赖一致；
+2. 打开 `settings.gradle` / `settings.gradle.kts`：
+   - 确认 `google()`、`mavenCentral()` 等仓库已配置；
+   - 如使用国内镜像，确认镜像仓库地址可访问。
+
+#### 步骤 6：网络与代理检查
+
+- 在公司网络环境或有代理时：
+  - `File` → `Settings` → `Appearance & Behavior` → `System Settings` → `HTTP Proxy` 检查代理配置；
+  - 如网络不稳定，可临时关闭 Gradle 离线模式（`File` → `Settings` → `Build, Execution, Deployment` → `Gradle` → 取消勾选 `Offline work`）。
+
+### 验证依赖是否已经正常生效
+
+1. 打开 `app/src/main/java/com/example/dreamaichat_app/data/remote/RetrofitClient.java`；
+2. 检查以下 import 是否都有且无红线：
+   - `import okhttp3.OkHttpClient;`
+   - `import okhttp3.logging.HttpLoggingInterceptor;`
+   - `import retrofit2.Retrofit;`
+3. 类名如 `HttpLoggingInterceptor`、`OkHttpClient`、`Retrofit` 不再提示 `Cannot resolve symbol`。
+
+### 常见依赖相关错误及处理
+
+#### 错误 1：网络超时（下载依赖时 Read timed out）
+
+**处理建议**：
+
+1. 检查网络和代理；
+2. 确认 `settings.gradle` 中已配置国内镜像源（本项目已配置腾讯云镜像）；
+3. 适当增加 Gradle 的网络超时设置。
+
+#### 错误 2：依赖版本冲突
+
+**错误示例**：`Conflict with dependency` / `Multiple versions found`  
+**处理建议**：
+
+1. 检查 `libs.versions.toml` 或 `build.gradle` 中的版本声明是否统一；
+2. 使用 `./gradlew :app:dependencies` 查看依赖树，定位冲突的 groupId/artifactId；
+3. 通过 `implementation(platform(...))` 或 `force` 统一版本。
+
+#### 错误 3：仓库访问失败（Could not resolve dependency）
+
+**处理建议**：
+
+1. 核对 `settings.gradle` 中的仓库地址是否拼写正确；
+2. 尝试切换或添加新的公共仓库/镜像；
+3. 检查本机防火墙/公司网关配置是否阻拦了 Maven 仓库。
+
+### 依赖问题快速检查清单
+
+- [ ] Gradle 同步已完成（底部状态栏显示 `Gradle build finished`）；
+- [ ] 已执行 `Build` → `Clean Project`；
+- [ ] 已执行 `Build` → `Rebuild Project`；
+- [ ] 已执行 `File` → `Invalidate Caches / Restart`；
+- [ ] `Build` 面板中无依赖解析相关错误；
+- [ ] `Gradle` 面板中的 `dependencies` 任务执行成功；
+- [ ] `RetrofitClient.java` 中相关 import 无红色错误提示。
+
+### 额外建议
+
+1. **保持 Android Studio 和 JDK 版本更新**：  
+   - 使用官方推荐的 Android Studio 版本；  
+   - JDK 建议使用 11 或更高版本。
+2. **必要时重新导入项目**：  
+   - 关闭 Android Studio，删除项目根目录下的 `.idea` 和 `.gradle` 目录，然后重新通过 Gradle 导入工程。
+
+---
+
 ## API Key 配置问题
 
 ### 问题描述
@@ -507,6 +660,100 @@ Room 中的 `messages` 表配置了指向 `conversations` 的外键。我们在 
 
 ---
 
+## Android 资源链接错误
+
+### iconGravity 属性不支持 "center" 值
+
+**错误信息**：
+```
+Android resource linking failed
+com.example.dreamaichat_app-mergeDebugResources-48:/layout/fragment_chat.xml:164: error: 'center' is incompatible with attribute iconGravity (attr) flags [start=1, textStart=2, end=3, textEnd=4, top=16, textTop=32].
+com.example.dreamaichat_app-mergeDebugResources-48:/layout/fragment_chat.xml:184: error: 'center' is incompatible with attribute iconGravity (attr) flags [start=1, textStart=2, end=3, textEnd=4, top=16, textTop=32].
+```
+
+**错误原因**：
+- `MaterialButton` 的 `app:iconGravity` 属性不支持 `center` 值
+- 该属性只支持：`start`、`textStart`、`end`、`textEnd`、`top`、`textTop`
+- 对于纯图标按钮（无文本），图标会自动居中，不需要设置 `iconGravity`
+
+**解决方案**：
+1. 移除 `app:iconGravity="center"` 属性
+2. 对于纯图标按钮，确保按钮是正方形（宽度和高度一致），图标会自动居中
+3. 或者改用 `ImageButton` 控件，更适合无背景的图标按钮
+
+**相关文件**：
+- `app/src/main/res/layout/fragment_chat.xml`
+
+**发生时间**：2025-12-02
+
+---
+
+## 对话图谱功能改进
+
+### 问题描述
+
+点击"对话图谱"中的历史会话后，返回聊天界面的文本中"会话摘要"部分显示"暂无摘要"，无法获取完整的对话历史。
+
+### 改进方案
+
+**修改前**：
+- 使用 `ConversationSummary` 的 `snippet` 字段（摘要）
+- 摘要可能为空或显示"暂无摘要"
+
+**修改后**：
+1. 点击历史会话时，从数据库加载该会话的**所有消息**（`MessageRepository.getMessagesByConversationId()`）
+2. 按时间顺序（`ORDER BY createdAt ASC`）格式化每条消息
+3. 格式化为清晰的对话格式：
+   - `用户：{消息内容}`
+   - `AI：{消息内容}`
+   - `系统：{消息内容}`（如果有）
+4. 将所有对话连接成完整文本，替换原来的摘要部分
+
+**实现细节**：
+- 使用 RxJava 的 `Single` 异步加载消息
+- 在 `ConversationGraphFragment` 中新增 `loadConversationMessages()` 方法
+- 新增 `formatConversationHistory()` 方法格式化对话文本
+- 使用 `CompositeDisposable` 管理订阅，避免内存泄漏
+
+**相关文件**：
+- `app/src/main/java/com/example/dreamaichat_app/ui/graph/ConversationGraphFragment.java`
+- `app/src/main/java/com/example/dreamaichat_app/data/repository/MessageRepository.java`
+
+**发生时间**：2025-12-02
+
+---
+
+## 聊天输入框按钮样式优化
+
+### 问题描述
+
+"发送"和"图片"按钮使用 `MaterialButton` 控件，带有背景色，与主界面工具栏的"设置"和"新对话"按钮样式不一致。用户希望统一为无背景的图标按钮。
+
+### 解决方案
+
+**修改前**：
+- 使用 `MaterialButton`，带有背景色（OutlinedButton 或 Filled Button）
+- 图标尺寸 24dp，按钮尺寸 48×48dp
+
+**修改后**：
+1. 改用 `ImageButton` 控件，无背景色
+2. 使用 `?attr/selectableItemBackgroundBorderless` 提供点击波纹效果
+3. 按钮尺寸改为 56×56dp，图标尺寸 32dp（通过 padding 12dp 控制）
+4. 图片按钮图标颜色：`@color/text_primary`
+5. 发送按钮图标颜色：`@color/primary`
+
+**布局调整**：
+- 移除所有 `MaterialButton` 相关的属性（`app:icon`、`app:iconGravity`、`app:iconSize` 等）
+- 使用 `android:src` 和 `app:tint` 控制图标和颜色
+- 使用 `android:scaleType="fitCenter"` 确保图标正确缩放
+
+**相关文件**：
+- `app/src/main/res/layout/fragment_chat.xml`
+
+**发生时间**：2025-12-02
+
+---
+
 ## 更新日志
 
 - **2025-11-28**：
@@ -515,3 +762,7 @@ Room 中的 `messages` 表配置了指向 `conversations` 的外键。我们在 
 - **2025-11-30**：
   - 添加 API 调用超时问题的解决方案
   - 添加 API Key 配置问题的解决方案
+- **2025-12-02**：
+  - 添加 iconGravity 属性不支持 "center" 值的错误解决方案
+  - 添加对话图谱功能改进说明（从摘要改为完整对话历史）
+  - 添加聊天输入框按钮样式优化说明（MaterialButton 改为 ImageButton）
