--- a/核心技术文档/部署指南.md
+++ b/核心技术文档/部署指南.md
@@ -983,7 +983,13 @@ repository.insertOrUpdateUser(testUser)
 
 | 资源 | 目录 | 使用场景 | 引用文件 | 替换建议 |
 | --- | --- | --- | --- | --- |
-| `ic_attach` | `drawable/` | 输入框“图片”按钮 | `fragment_chat.xml` | 小图标，24dp，适合用简单 PNG |
+| `ic_attach` | `drawable/` | 输入框"图片"按钮（无背景图标按钮） | `fragment_chat.xml` | 32dp 附件图标，建议使用单色或透明背景 PNG |
+| `ic_send` | `drawable/` | 输入框"发送"按钮（无背景图标按钮） | `fragment_chat.xml` | 32dp 发送图标，建议使用箭头或发送符号 PNG |
+| `ic_user_avatar` | `drawable/` | "我的"页面用户头像 | `fragment_profile.xml` | 80×80dp 用户头像，建议使用圆形头像 PNG |
+| `ic_template_code` | `drawable/` | 对话模板"编程助手"图标 | `item_template_simple.xml` | 40×40dp 编程相关图标 PNG |
+| `ic_template_paper` | `drawable/` | 对话模板"论文助手"图标 | `item_template_simple.xml` | 40×40dp 文档/论文相关图标 PNG |
+| `ic_template_medical` | `drawable/` | 对话模板"医疗咨询"图标 | `item_template_simple.xml` | 40×40dp 医疗/健康相关图标 PNG |
+| `ic_template_translate` | `drawable/` | 对话模板"翻译专家"图标 | `item_template_simple.xml` | 40×40dp 翻译/语言相关图标 PNG |
 | `ic_copy_16` | `drawable/` | AI 气泡复制按钮 | `item_message_ai.xml` | 16–20dp，避免遮挡文本 |
 | `ic_chevron_down` | `drawable/` | 模型切换箭头 | `fragment_chat.xml`（模型 header） | 仅改色可在 XML 里调 `fillColor` |
 | `ic_ai_avatar_placeholder` | `drawable/` | AI 头像占位 | `item_message_ai.xml` | 可替换为品牌角色头像 |
@@ -1010,7 +1016,7 @@ repository.insertOrUpdateUser(testUser)
 
 这里以几类典型图标为例：**聊天区域按钮**、**底部 TabBar 图标**、**顶部工具栏按钮**、**侧边栏菜单图标**。所有图标的本质操作是一样的：用 Image Asset 把对应的 `ic_xxx` 名称替换成你的 PNG。
 
-#### 9.3.1 替换聊天输入框的“图片”按钮图标（ic_attach）
+#### 9.3.1 替换聊天输入框的"图片"按钮图标（ic_attach）
 
 1. 在电脑上准备一张小图标 PNG，比如 96×96 或 128×128，放在 `D:\my_icons\attach.png`。
 2. 在 Android Studio 左侧 `Project` 面板中：
@@ -1024,6 +1030,78 @@ repository.insertOrUpdateUser(testUser)
    - 大小一般选 24dp 或 32dp，预览里看着合适即可。
 5. 点击 `Next` → `Finish`。  
    Android Studio 会自动在 `drawable/` 下生成或覆盖 `ic_attach.png` / `ic_attach.xml` 等资源，布局里引用的 `@drawable/ic_attach` 自动变成你的图标。
+
+#### 9.3.1.1 替换聊天输入框的"发送"和"图片"按钮图标（ic_send / ic_attach）
+
+**重要**：发送和图片按钮现在是**无背景的图标按钮**（ImageButton），与工具栏的"设置"和"新对话"按钮样式一致。
+
+**按钮样式说明**：
+- 使用 `ImageButton` 控件，无背景色
+- 点击时有波纹效果（`selectableItemBackgroundBorderless`）
+- 图标尺寸：32dp（按钮尺寸 56×56dp，padding 12dp）
+- 图片按钮图标颜色：主题色（`@color/text_primary`）
+- 发送按钮图标颜色：主色调（`@color/primary`）
+
+**替换步骤**：
+
+1. **替换"图片"按钮图标（ic_attach）**：
+   - 准备一张附件/图片图标 PNG，建议 128×128，放在 `D:\my_icons\attach.png`
+   - 右键 `drawable` 目录 → `New` → `Image Asset`
+   - `Icon Type` 选择 **Action Bar and Tab Icons**
+   - `Name` 填写：**ic_attach**
+   - 源图选择你的 `attach.png`
+   - 大小选 32dp（图标会显示在 56×56dp 的按钮中）
+   - 点击 `Next` → `Finish`
+
+2. **替换"发送"按钮图标（ic_send）**：
+   - 准备一张发送图标 PNG，建议 128×128，放在 `D:\my_icons\send.png`
+   - 右键 `drawable` 目录 → `New` → `Image Asset`
+   - `Icon Type` 选择 **Action Bar and Tab Icons**
+   - `Name` 填写：**ic_send**
+   - 源图选择你的 `send.png`
+   - 大小选 32dp
+   - 点击 `Next` → `Finish`
+
+**注意**：
+- 图标会以主题色或主色调显示（通过 `app:tint` 属性控制），建议使用单色图标或透明背景的图标
+- 如果希望图标保持原始颜色，可以在布局文件中移除 `app:tint` 属性
+
+#### 9.3.1.2 替换"我的"页面用户头像（ic_user_avatar）
+
+1. 准备一张用户头像 PNG，建议 256×256 或更大（方形），放在 `D:\my_icons\user_avatar.png`。
+2. 右键 `drawable` 目录 → `New` → `Image Asset`。
+3. 在弹窗中：
+   - `Icon Type` 选择 **Action Bar and Tab Icons** 或 **Launcher Icons (Legacy Only)**。
+   - `Name` 填写：**ic_user_avatar**。
+   - 源图选择你的 `user_avatar.png`。
+   - 大小选 80dp（与布局中的 ImageView 尺寸一致）。
+4. 点击 `Next` → `Finish`。
+
+**提示**：头像会以 `centerCrop` 模式显示，建议使用圆形或方形头像，确保主体在中心位置。
+
+#### 9.3.1.3 替换对话模板图标（ic_template_code / ic_template_paper / ic_template_medical / ic_template_translate）
+
+对话模板界面有 4 个模板，每个模板都有独立的图标：
+
+- `ic_template_code` → "编程助手"模板图标
+- `ic_template_paper` → "论文助手"模板图标  
+- `ic_template_medical` → "医疗咨询"模板图标
+- `ic_template_translate` → "翻译专家"模板图标
+
+**替换步骤**（每个图标重复一次）：
+
+1. 准备 4 张对应的 PNG 图标，建议 128×128，分别命名为：
+   - `template_code.png`（编程相关图标，如代码符号、键盘等）
+   - `template_paper.png`（文档相关图标，如纸张、文档等）
+   - `template_medical.png`（医疗相关图标，如医疗十字、听诊器等）
+   - `template_translate.png`（翻译相关图标，如语言符号、地球等）
+2. 对每个图标，右键 `drawable` → `New` → `Image Asset`：
+   - `Name` 分别填写：`ic_template_code`、`ic_template_paper`、`ic_template_medical`、`ic_template_translate`
+   - 源图选择对应的 PNG
+   - 大小选 40dp（与布局中的 ImageView 尺寸一致）
+3. 每个都点击 `Next` → `Finish`。
+
+完成后，对话模板界面中的 4 个模板卡片会显示你自定义的图标。
 
 #### 9.3.2 替换 AI 头像占位图标（ic_ai_avatar_placeholder）
 
@@ -1308,26 +1386,3 @@ defaultConfig {
    ```
 
 
-
-## 14. 后续步骤
-
-1. **实现剩余功能**
-   - 完善聊天界面功能
-   - 实现历史记录管理
-   - 实现个人中心功能
-   - 实现特色功能（模板、路由、图谱）
-
-2. **集成第三方服务**
-   - 微信登录 SDK
-   - 苹果登录 SDK
-   - 推送服务
-
-3. **优化用户体验**
-   - 添加加载动画
-   - 优化错误提示
-   - 添加离线支持
-
-4. **测试和优化**
-   - 进行全面的功能测试
-   - 性能优化
-   - 内存泄漏检查
