--- a/核心技术文档/架构设计白皮书.md
+++ b/核心技术文档/架构设计白皮书.md
@@ -1,10 +1,13 @@
-# DreamAIChat_APP 架构设计文档
+# DreamAIChat_APP 架构设计白皮书
+
+
 
 ## 1. 项目概述
 
 ### 1.1 项目信息
-- **项目名称**: DreamAIChat_APP（即梦）
-- **开发语言**: Java
+- **项目名称**: DreamAIChat_APP
+- **APP名称**:Dream (即梦)
+- **开发语言**: Java + Kotlin
 - **架构模式**: MVI (Model-View-Intent)
 - **目标平台**: Android 5.0+ (API 21+)
 - **最低 SDK**: 21
@@ -12,11 +15,14 @@
 
 ### 1.2 技术栈
 - **UI框架**: XML布局 + ViewBinding
-- **异步处理**: RxJava 3
+- **异步处理**: RxJava 3 + LiveData
 - **网络层**: Retrofit 2 + OkHttp 3
 - **数据持久化**: Room
-- **架构组件**: ViewModel, LiveData, Lifecycle
+- **架构模式**: MVVM（主流程）+ MVI（登录入口）
+- **架构组件**: AndroidViewModel, LiveData, Lifecycle, RxJava Schedulers
 - **UI组件**: Material Design Components
+
+
 
 ## 2. 架构设计
 
@@ -56,59 +62,36 @@
 └────────────────┘  └────────────────┘
 ```
 
-### 2.2 MVI 架构模式
+### 2.2 架构模式：MVVM + MVI 协同
 
-#### 2.2.1 核心概念
+#### 2.2.1 为什么采用混合模式
 
-**MVI (Model-View-Intent)** 是一种单向数据流架构模式：
+- **登录入口** 需要明确的状态流转（Idle → Loading → Success/Error），继续沿用训练营早期提供的 `BaseViewModel` + Intent + State 模板最省心。
+- **核心功能（聊天 / 历史 / 个人中心）** 在正式迭代中转向更贴近 Android 官方推荐的 **MVVM + LiveData** 写法，便于与 Room、ViewBinding、导航栈集成。
+- 通过混合模式，可以在不破坏原有登录代码的前提下，逐步将业务迁移到更轻量的 MVVM 形态。
 
-1. **Intent**: 用户动作（发送消息、清空对话等）
-2. **Processor**: 处理 Intent，执行业务逻辑
-3. **State**: 不可变的UI状态（消息列表、加载状态等）
-4. **View**: 基于状态的纯渲染组件
+#### 2.2.2 MVVM（聊天 / 历史 / 个人中心）
 
-#### 2.2.2 数据流
+- `ChatViewModel` / `HistoryViewModel` / `ProfileFragment` 等全部继承 `AndroidViewModel`，直接暴露 `LiveData` 给界面层。
+- 单向数据流示意：
+  ```
+  用户交互 → Fragment → ViewModel（封装 UseCase / Repository） → LiveData<State>
+                                                        ↓
+                                                 Room/Retrofit
+  ```
+- 关键实践：
+  - `MutableLiveData<List<ChatMessage>>` 驱动消息列表；
+  - `MutableLiveData<Boolean>` 控制“AI 正在生成”动画；
+  - 通过 `SessionManager` 持久化 Token、用户昵称等。
 
-```
-用户交互 → Intent → ViewModel → UseCase → Repository → DataSource
-                                                              ↓
-UI更新 ← State ← ViewModel ← UseCase ← Repository ← DataSource
-```
+#### 2.2.3 MVI（登录模块）
 
-#### 2.2.3 实现细节
-
-**BaseViewModel** 是 MVI 架构的核心：
-
-```java
-public abstract class BaseViewModel<S extends State, I extends Intent> extends ViewModel {
-    private final BehaviorSubject<S> stateSubject;  // 状态流
-    private final PublishSubject<I> intentSubject;   // Intent流
-    
-    // 处理 Intent 并产生新的 State
-    protected abstract Observable<S> processIntents(Observable<I> intents);
-}
-```
-
-**State** 是不可变的数据类，包含所有UI需要的信息：
-
-```java
-public class LoginState implements ViewState {
-    public boolean isLoading;
-    public String errorMessage;
-    public boolean isLoginSuccess;
-}
-```
-
-**Intent** 表示用户的意图：
-
-```java
-public interface LoginIntent extends Intent {
-    class Login implements LoginIntent {
-        public final String account;
-        public final String password;
-    }
-}
-```
+- 登录仍由 `BaseViewModel`、`LoginIntent`、`LoginState` 组合驱动：
+  ```
+  Intent(Login / Register) → LoginViewModel → LoginUseCase → LoginState (Idle/Loading/Success/Error)
+  ```
+- 该模块对 RxJava 依赖最深（使用 `BehaviorSubject`、`CompositeDisposable` 管理状态流）。
+- 由于登录只发生在启动阶段，保留 MVI 可以复用原先的状态机代码，同时避免大规模重构。
 
 ### 2.3 分层架构详解
 
@@ -223,6 +206,7 @@ Repository → DAO (Room) → Database
 #### 2.4.2 网络层
 
 **Retrofit 配置**:
+
 - Base URL: 可配置
 - 日志拦截器: 开发环境启用
 - RxJava 适配器: 支持响应式编程
@@ -247,6 +231,8 @@ ViewModel → UseCase → Repository → DAO/ApiService
 ```
 
 每一层只依赖下一层，保持单向依赖。
+
+
 
 ## 3. 核心模块
 
@@ -275,9 +261,9 @@ ViewModel → UseCase → Repository → DAO/ApiService
 
 **关键类**:
 - `ChatFragment`: 聊天界面
-- `ChatViewModel`: 聊天逻辑（待实现）
+- `ChatViewModel`: 继承 `AndroidViewModel`，负责消息列表、附件队列、模型切换等逻辑
 - `SendMessageUseCase`: 发送消息业务逻辑
-- `GetMessagesUseCase`: 获取消息业务逻辑
+- `GetMessagesUseCase`: 获取消息业务逻辑（Room + ConversationRepository）
 
 ### 3.3 历史模块
 
@@ -288,7 +274,7 @@ ViewModel → UseCase → Repository → DAO/ApiService
 
 **关键类**:
 - `HistoryFragment`: 历史界面
-- `HistoryViewModel`: 历史逻辑（待实现）
+- `HistoryViewModel`: 负责搜索、分组、刷新状态
 - `GetConversationsUseCase`: 获取会话列表业务逻辑
 
 ### 3.4 个人中心模块
@@ -299,8 +285,10 @@ ViewModel → UseCase → Repository → DAO/ApiService
 - 特色功能入口
 
 **关键类**:
-- `ProfileFragment`: 个人中心界面
-- `ProfileViewModel`: 个人中心逻辑（待实现）
+- `ProfileFragment`: 个人中心界面（直接读取 `SessionManager` + Room 统计）
+- `AccountSettingsFragment`: 编辑昵称 / 注销账号
+
+
 
 ## 4. 设计原则
 
@@ -317,6 +305,8 @@ ViewModel → UseCase → Repository → DAO/ApiService
 - **DRY (Don't Repeat Yourself)**: 避免代码重复
 - **KISS (Keep It Simple, Stupid)**: 保持简单
 - **YAGNI (You Aren't Gonna Need It)**: 不要过度设计
+
+
 
 ## 5. 最佳实践
 
@@ -344,6 +334,8 @@ ViewModel → UseCase → Repository → DAO/ApiService
 - 使用 `copyWith` 方法创建新状态
 - 通过 `distinctUntilChanged` 避免重复更新
 
+
+
 ## 6. 扩展性设计
 
 ### 6.1 模块化
@@ -364,6 +356,8 @@ ViewModel → UseCase → Repository → DAO/ApiService
 - 清晰的分层结构
 - 统一的代码风格
 - 完善的注释和文档
+
+
 
 ## 7. 项目文件结构
 
@@ -422,15 +416,15 @@ app/src/main/java/com/example/dreamaichat_app/
 - `ui/history/HistoryFragment.java`: 历史界面
 - `ui/profile/ProfileFragment.java`: 个人中心界面
 
+
+
 ## 8. 总结
 
-本项目采用 **MVI + 分层架构** 的设计模式，确保了：
+DreamAIChat_APP 项目采用 **MVI + 分层架构** 的设计模式，确保了：
 
 1. **可维护性**: 清晰的分层结构，易于理解和修改
 2. **可测试性**: 各层独立，便于单元测试
 3. **可扩展性**: 模块化设计，易于添加新功能
 4. **性能**: 使用 RxJava 进行异步处理，避免阻塞主线程
 5. **用户体验**: 响应式设计，流畅的交互体验
-
-通过严格遵循架构设计原则和最佳实践，本项目为生产级 Android 应用开发提供了坚实的基础。
 
