--- a/核心技术文档/部署指南.md
+++ b/核心技术文档/部署指南.md
@@ -928,6 +928,40 @@ repository.insertOrUpdateUser(testUser)
 3. 检查 API 服务器是否可访问
 4. 查看 Logcat 中的错误信息
 
+### 8.6 端口被占用
+
+**问题**: 启动后端时提示端口已被占用，例如：
+```
+Web server failed to start. Port 8081 was already in use.
+```
+
+**解决方案**:
+
+1. **查看占用端口的进程**
+   ```bash
+   netstat -ano | findstr :端口号
+   ```
+
+2. **终止占用端口的进程**
+   ```bash
+   # 使用进程ID终止
+   Get-Process -Id 进程ID | Stop-Process -Force
+   
+   # 或使用端口直接终止
+   Get-Process -Id (Get-NetTCPConnection -LocalPort 端口号).OwningProcess | Stop-Process -Force
+   ```
+
+3. **修改后端端口配置**
+   如果无法终止占用端口的进程，可以修改后端配置使用其他端口：
+   - 编辑 `DreamAIChat_backend/src/main/resources/application.yml`
+   - 将 `server.port` 从 8081 改为其他可用端口，例如 8082
+   - 同步修改 Android 应用中 `RetrofitClient` 的 `BASE_URL` 端口
+
+4. **重新启动后端**
+   ```bash
+   ./gradlew bootRun
+   ```
+
 
 
 ## 9. 图片资源配置
@@ -1385,4 +1419,67 @@ defaultConfig {
    }
    ```
 
+
+## 14. 模型联网诊断（新增）
+
+> 如果后端已经启动，但豆包 / DeepSeek 仍然只返回“演示模式”提示，请使用下面的步骤确认服务器是否真的能访问外网。
+
+### 14.1 调用诊断接口
+
+后端新增 `GET /api/diagnostics/providers` 接口，会逐一检测每个模型提供方的：
+
+- `baseUrl` 是否配置
+- API Key 是否仍为 `DEMO-KEY`
+- DNS 是否可解析
+- 是否能在 5 秒内建立 TCP 连接
+
+**调用示例（在运行后端的机器）：**
+
+```bash
+curl http://localhost:8081/api/diagnostics/providers
+```
+
+**返回示例：**
+
+```json
+{
+  "code": 0,
+  "message": "ok",
+  "success": true,
+  "data": [
+    {
+      "provider": "deepseek",
+      "baseUrl": "https://api.deepseek.com/v1/chat/completions",
+      "apiKeyConfigured": true,
+      "dnsResolved": true,
+      "reachable": true,
+      "message": "基础连通性正常"
+    },
+    {
+      "provider": "doubao",
+      "baseUrl": "https://ark.cn-beijing.volces.com/api/v3/chat/completions",
+      "apiKeyConfigured": false,
+      "dnsResolved": true,
+      "reachable": true,
+      "message": "API Key 未配置或为默认值"
+    }
+  ]
+}
+```
+
+### 14.2 常见诊断结论
+
+| 状态 | 可能原因 | 处理方式 |
+| --- | --- | --- |
+| `apiKeyConfigured = false` | 仍然使用 `DEMO-KEY` | 在 `application-local.yml` 或环境变量里填入真实的 `DEEPSEEK_API_KEY` / `DOUBAO_API_KEY` |
+| `dnsResolved = false` | 服务器无外网 / DNS 被拦截 | 检查公司网络策略，必要时配置 HTTP 代理或迁移到可联网的服务器 |
+| `reachable = false` | 被防火墙拦截或端口被封 | 确认 443/80 端口是否开放，或联系网络管理员放行 |
+| 三项都为 `true` 仍是演示模式 | 模型返回 401/404，日志中可见 | 检查 API Key 是否过期、模型名称是否正确，必要时抓取后端日志定位 |
+
+### 14.3 建议排查顺序
+
+1. 先调用诊断接口，确认是“网不通”还是“Key 有问题”；
+2. 如果是网络问题，使用 `ping`/`tracert`/代理等方式验证宿主机能否访问 `api.deepseek.com`、`ark.cn-beijing.volces.com`；
+3. 如果是 Key 问题，重新生成并配置到环境变量或 `application-local.yml`，再重启后端；
+4. 仍然失败时，查看后端日志（`ModelRouterService` 会打印 Base URL、HTTP 状态码和错误响应），按提示修复。
 
